# persian-deepspeech

./: README.md  pyproject.toml  setup.py
pydeepspeech/: installModels.py
