[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydeepspeech"
version = "0.0.1"
description = "Mozilla's DeepSpeech transcriber in a pip installable package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6.0"
authors = [
    { name = "Zach Vorhies", email = "dont@email.me" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "capturing_process",
    "deepspeech==0.9.3",
    "pathlib",
    "requests",
    "webrtcvad-wheels",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
pydeepspeech = "pydeepspeech.run:main"

[project.urls]
Homepage = "https://github.com/zackees/pydeepspeech"


[tool.hatch.build.targets.sdist]
include = [
    "/pydeepspeech",
]
