[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydeepspeech"
version = "0.0.4"
description = "Mozilla's DeepSpeech transcriber in a pip installable package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6.0"
authors = [
    { name = "Zach Vorhies", email = "dont@email.me" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "capturing_process",
    "deepspeech@https://files.pythonhosted.org/packages/90/fe/3be367996fd7e68b6409fd4f172893b4b88fad04cba75003c754f011cab1/deepspeech-0.9.3-cp39-cp39-win_amd64.whl",
    "pathlib",
    "requests",
    "webrtcvad-wheels",
]


[tool.hatch.metadata]
allow-direct-references = true


[project.optional-dependencies]
test = [
    "pytest",
]


[project.scripts]
pydeepspeech = "pydeepspeech.run:main"


[project.urls]
Homepage = "https://github.com/zackees/pydeepspeech"


[tool.hatch.build.targets.sdist]
include = [
    "/pydeepspeech",
]
