[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydeepspeech"
version = "0.0.4"
description = "Mozilla's DeepSpeech transcriber in a pip installable package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6.0"
authors = [
    { name = "Zach Vorhies", email = "dont@email.me" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "capturing_process",
    "deepspeech@https://files.pythonhosted.org/packages/f8/a4/224baca08a4474e810917ee367e3ceb4b26376071558237ef0513c81fe5e/deepspeech-0.9.3-cp37-cp37m-win_amd64.whl",
    "pathlib",
    "requests",
    "webrtcvad-wheels",
]


[tool.hatch.metadata]
allow-direct-references = true


[project.optional-dependencies]
test = [
    "pytest",
]


[project.scripts]
pydeepspeech = "pydeepspeech.run:main"


[project.urls]
Homepage = "https://github.com/zackees/pydeepspeech"


[tool.hatch.build.targets.sdist]
include = [
    "/pydeepspeech",
]
